= Changelog
All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [Unreleased]
=== Changed

* Rename `engine.New(..)` into `hoff.NewEngine(..)`
* Rename `engine.SEQUENTIAL` into `hoff.SequentialComputation`
* Rename `computation.New(..)` into `hoff.NewComputation(..)`
* Rename `system.New(..)` into `hoff.NewNodeSystem(..)`
* Rename `joinmode.AND` into `hoff.JoinAnd`
* Rename `joinmode.OR` into `hoff.JoinOr`
* Rename `joinmode.NONE` into `hoff.JoinNone`
* Rename `node.NewAction(..)` into `hoff.NewActionNode(..)`
* Rename `node.NewDecision(..)` into `hoff.NewDecisionNode(..)`

== [0.3.1] - 2018-11-12
=== Fixed

* Allow detection of deep and multiple cycles in a node system.

== [0.3.0] - 2018-10-11
=== Added

* An node system can't authorized multiple links to a node without a join mode defined.

=== Fixed

* Don't compute twice a node when using AND or OR as join mode on it.

== [0.2.0] - 2018-10-08
=== Added

* Create an engine to run multiple computations against a Node system.

=== Changed

* Expose Data field in the Context.
* An action node can't stop.

== [0.1.0] - 2018-10-05
=== Added

* Create action node,
* Create decision node,
* Create and manipulate a Node system,
* Create and run a sequential computation of the Node system.